LendingTree Lead Onboarding Automation/main/default/objects/SMS_Provider_API_Setup__c/SMS_Provider_API_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store sms provider API credentials</description>
    <label>SMS Provider API Setup</label>
</CustomObject>