LendingTree Lead Onboarding Automation/main/default/objects/SMS_Provider_API_Setup__c/fields/Auth_Id__c.field-meta.xml
<CustomField>
    <fullName>Auth_Id__c</fullName>
    <label>Auth Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>