LendingTree Lead Onboarding Automation/main/default/objects/SMS_Provider_API_Setup__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>