LendingTree Lead Onboarding Automation/main/default/objects/SMS_Provider_API_Setup__c/fields/Source_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Phone_Number__c</fullName>
    <label>Source Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>